--- a/notebooks/basic_tests.ipynb
+++ b/notebooks/basic_tests.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "source": [
+    "import repackage\n",
+    "repackage.up()\n",
     "import numpy as np\n",
     "from numpy import random as rand\n",
     "import matplotlib.pyplot as plt\n",
@@ -233,7 +235,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.0 64-bit ('TimeSeries': conda)"
+   "display_name": "Python 3.8.10 64-bit ('TimeSeries': conda)"
   },
   "language_info": {
    "name": "python",
