--- a/notebooks/bike_data.ipynb
+++ b/notebooks/bike_data.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
+    "import repackage\n",
+    "repackage.up()\n",
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
