--- a/notebooks/bike_data.ipynb
+++ b/notebooks/bike_data.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "with open('data/data_velib.json') as json_file:\n",
+    "with open('../data/data_velib.json') as json_file:\n",
     "    data = json.load(json_file)\n",
     "df = pd.DataFrame(np.array([float(s) if s != \"\" else float('nan') for s in data['y']]), columns = ['signal'], index = pd.to_datetime(data[\"x\"]))\n",
     "df.head()"
@@ -228,7 +228,7 @@
     "plt.plot(df[\"trend\"] * max_n_uses, label=\"Trend\")\n",
     "plt.xticks(rotation = 45)\n",
     "plt.legend()\n",
-    "plt.savefig(\"plots/velib_trend.png\", bbox_inches = \"tight\")\n",
+    "plt.savefig(\"../plots/velib_trend.png\", bbox_inches = \"tight\")\n",
     "plt.show()"
    ],
    "outputs": [
@@ -262,7 +262,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f6a79c9a3a0>"
+       "<matplotlib.legend.Legend at 0x7efddacbe220>"
       ]
      },
      "metadata": {},
@@ -306,7 +306,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f6a79c00b20>"
+       "<matplotlib.legend.Legend at 0x7efddadc9820>"
       ]
      },
      "metadata": {},
@@ -359,7 +359,7 @@
     "        \n",
     "        plt.text(tau_det[i+1],y_coord,f'p = {np.exp(p_values[i]):.1e}',rotation=70)\n",
     "    if save_name != \"\":\n",
-    "        plt.savefig(\"plots/\" + save_name, bbox_inches = \"tight\")\n",
+    "        plt.savefig(\"../plots/\" + save_name, bbox_inches = \"tight\")\n",
     "    plt.plot()"
    ],
    "outputs": [],
@@ -376,7 +376,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-11-5ab00ca02ef2>:8: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "<ipython-input-11-2bdd14228c3f>:8: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[0].set_xticklabels([0] + list(final_signal.index.strftime(\"%Y-%m-%d\").to_numpy()[xtickind]))\n"
      ]
     },
@@ -412,7 +412,7 @@
     "    'Date et heure de comptage': object,\n",
     "}\n",
     "usecols = dtype.keys()\n",
-    "df = pd.read_csv('data/comptage-velo-donnees-compteurs.csv', sep=';', dtype=dtype, usecols=usecols)\n",
+    "df = pd.read_csv('../data/comptage-velo-donnees-compteurs.csv', sep=';', dtype=dtype, usecols=usecols)\n",
     "df.head()"
    ],
    "outputs": [
@@ -534,7 +534,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f6a71bcc880>]"
+       "[<matplotlib.lines.Line2D at 0x7efdd2bd6c70>]"
       ]
      },
      "metadata": {},
@@ -583,7 +583,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-11-5ab00ca02ef2>:8: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "<ipython-input-11-2bdd14228c3f>:8: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[0].set_xticklabels([0] + list(final_signal.index.strftime(\"%Y-%m-%d\").to_numpy()[xtickind]))\n"
      ]
     },
@@ -613,7 +613,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.0 64-bit ('TimeSeries': conda)"
+   "display_name": "Python 3.8.10 64-bit ('TimeSeries': conda)"
   },
   "language_info": {
    "name": "python",
